Solve spacing between label text and input

--- a/styles.css
+++ b/styles.css
@@ -78,8 +78,8 @@ fieldset:nth-of-type(6) {
     margin-right: 15px;
 }
 
-.first > input {
-    margin-left: 10px;
+.first > label > input {
+    margin-left: 5px;
 }
 
 input[type="radio"]:checked:before {
